# Chainplay

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  vercel.json
api/game/: matches.ts  status.ts
client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/e2e/: browser-e2e.mjs
client/public/imgs/: landing-bg.avif
client/src/: App.tsx  Arcade.tsx  BackBar.tsx  Game.tsx  GamesHub.tsx  GuessStats.tsx  GuessTeam.tsx  IntroSplash.tsx  Landing.tsx  Markets.tsx  Navbar.tsx  StakedHilo.tsx  Survivor.tsx  WalletPage.tsx  i18n.tsx  main.tsx  style.css  types.ts
client/src/chain/: account.tsx  http.ts  oddies.ts  oddies_bet.json  wallet.tsx
client/src/components/: HowTo.tsx  Leaderboard.tsx  MatchCard.tsx  StakedSession.tsx
docs/: README.md  audit-log-integracao.md  jogos-disponiveis.md  logs-erros-inconsistencias.md  nft-identidade-por-jogo.md  plano-minigames.md  security-review.md  welikesports-funcionalidades.md
program/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
program/programs/oddies-bet/: Cargo.toml
program/programs/oddies-bet/src/: lib.rs
program/scripts/: initialize-devnet.ts  test-local.sh
program/tests/: oddies-bet.ts  z-fuzz.ts
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/assets/nft/: guess-the-stats.json  guess-the-team.json  hi-lo.json  infinite-hi-lo.json  live-challenge.json  (+2 more)
server/src/: app.ts  auth.ts  config.ts  crons.ts  gameService.ts  index.ts  mockData.ts  txlineAuth.ts  txlineData.ts  wallet.ts
(+44 files in other folders)
