[package]
name = "oddies-bet"
version = "0.1.0"
description = "Mercados de aposta parimutuel (multiplayer) e house-backed (singleplayer) com ticket-NFT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oddies_bet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["metadata"] }
